<resources>
    <string name="Title_email">Title FeedBack</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="admob_app_id">ca-app-pub-4944636948020523~2950052341</string>
    <string name="admob_banner">ca-app-pub-4944636948020523/8149573986</string>
    <string name="admob_full">ca-app-pub-4944636948020523/7375833776</string>
    <string name="admob_native">ca-app-pub-4944636948020523/4749670431</string>
    <string name="alert_dialog_internal_audio_warning_message">"Internal audio recording usually records along with mic audio.
Also, it does not work on all phones (Confirmed working on OnePlus, Xiaomi, and few Moto phones). You might try your luck"</string>
    <string name="alert_dialog_internal_audio_warning_negative_btn_text">Do not show this message again</string>
    <string name="alert_dialog_internal_audio_warning_title">Warning</string>
    <string name="alert_dialog_r_submix_audio_warning_message">"Recording internal audio using submix will require you to install the magisk systemizer module which is in closed beta now. Join the support group to download the module.
Note: This will force close the app if the module is not installed."</string>
    <string name="alert_ext_dir_warning_message">Saving to external directory may not work on all phones. Proceed with caution.</string>
    <string name="alert_ext_dir_warning_title">Warning</string>
    <string name="alert_external_storage_warn_cb_text">Do not show again</string>
    <string name="alert_message_create_folder">Enter folder name</string>
    <string name="alert_permission_denied_message">"The app requires storage permission to save the recorded video and change default save directory.The app is rendered useless without the permission

Do you want to grant it now?"</string>
    <string name="alert_permission_denied_title">Storage Permission Denied</string>
    <string name="alert_title_create_folder">Create Folder</string>
    <string name="app_name">DU Recorder</string>
    <string name="app_shortcut_action">com.DUrecorder.screenrecorder.videorecorde.RECORD</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applock_permission_guide_reminder">You need to grant Usage Access permission to enable this feature</string>
    <string name="audiorec_key">audiorecloc</string>
    <string name="bitrate_key">bitrate</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="confirm_close">Are you sure you want to close this activity?</string>
    <string name="confirm_exit">Do you really want to exit?</string>
    <string name="dialog_title_delete_old_file">Delete old file?</string>
    <string name="dir_exist">Directory already exists</string>
    <string name="email_feedback">emailne@gmail.com</string>
    <string name="error_permission_make_dir">No permission to write to directory</string>
    <string name="exit_app">Exit</string>
    <string name="expand_button_title">Advanced</string>
    <string name="external_storage_dir_not_writable">The directory is not writable</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fatal_exception_message">ScreenRecorder: Fatal Exception occurred. Log has been sent</string>
    <string name="file_delete_successfuly">File deleted successfully</string>
    <string name="filename_key">filename</string>
    <string name="fileprefix_key">fileprefix</string>
    <string name="fps_key">fps</string>
    <string name="good_5_stars">Good, 5 stars</string>
    <string name="guide_activity_usage_stats_page_text2">Please permit usage access</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="install_app_ads">Install Now</string>
    <string name="kilobyte">KB</string>
    <string name="language_key">language</string>
    <string name="link_policy">https://policy.com</string>
    <string name="megabyte">MB</string>
    <string name="menu_delete">delete</string>
    <string name="menu_select_all">select all</string>
    <string name="menu_share">Share</string>
    <string name="message_dialog_feed_back">Request bug fix and implement new features via email</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_more">More App</string>
    <string name="nav_policy">Policy</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>
    <string name="nav_video">Videos</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no">No</string>
    <string name="not_good">Not good</string>
    <string name="notsupport">Your device is not support</string>
    <string name="ok">OK</string>
    <string name="orientation_key">orientation</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_deny">Permission Denied</string>
    <string name="photo_list_no_photo_message">No photos available</string>
    <string name="preference_app_chooser_key">app_chosen</string>
    <string name="preference_app_chooser_summary">Choose an app to start by default while recording</string>
    <string name="preference_app_chooser_title">Choose App</string>
    <string name="preference_audio_record_title">Record audio</string>
    <string name="preference_bit_title">Bit rate</string>
    <string name="preference_camera_overlay_key">camera_overlay</string>
    <string name="preference_camera_overlay_summary">Enable/Disable Camera overlay. You can switch between front and back camera</string>
    <string name="preference_camera_overlay_title">Show Camera Overlay</string>
    <string name="preference_enable_target_app_key">enable_app_target</string>
    <string name="preference_enable_target_app_summary">Open target app before recording</string>
    <string name="preference_enable_target_app_title">Enable target app</string>
    <string name="preference_filename_format_title">File name format</string>
    <string name="preference_filename_prefix_title">File name prefix</string>
    <string name="preference_floating_control_key">floating_controls</string>
    <string name="preference_floating_control_summary">Enable/Disable floating controls which draws over every screen</string>
    <string name="preference_floating_control_title">Use Floating Controls</string>
    <string name="preference_fps_title">Frames per second</string>
    <string name="preference_language_title">Language</string>
    <string name="preference_orientation_title">Orientation</string>
    <string name="preference_resolution_title">Resolution</string>
    <string name="preference_save_gif_key">save_gif</string>
    <string name="preference_save_gif_summary">Enables saving videos as GIF animation</string>
    <string name="preference_save_gif_title">Enable saving in GIF</string>
    <string name="preference_save_location_title">Save location</string>
    <string name="preference_shake_gesture_key">shake_gesture</string>
    <string name="preference_shake_gesture_summary">Shake your device to start or stop recording</string>
    <string name="preference_shake_gesture_title">Shake to start/stop recording</string>
    <string name="preference_show_touch_key">touch_pointer</string>
    <string name="preference_show_touch_summary">Enable/disable touch</string>
    <string name="preference_show_touch_title">Show touches</string>
    <string name="preference_timer_title">Countdown Timer</string>
    <string name="rate_msg">Our team are working very hard to give you the best free application. Your 5-star review is worth more than all money. Please write a nice review in Google Play to encourage me.</string>
    <string name="remind_later">Remind later</string>
</resources>