<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/style_dialog_full" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/native_ad_media_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/bt_container">
        <ImageView android:gravity="center" android:id="@id/ivAdsBig" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="150.0dip" android:src="@drawable/ic_nz_studio" android:scaleType="fitCenter" android:adjustViewBounds="true" />
    </FrameLayout>
    <TextView android:textSize="@dimen/text_details" android:textColor="@color/text_color" android:id="@id/rd_msg" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_msg" android:fontFamily="@font/roboto_light" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip">
        <TextView android:textSize="@dimen/text_details" android:textColor="@color/text_color" android:gravity="center" android:layout_gravity="center" android:id="@id/btn_good" android:background="@drawable/selector_button" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/good_5_stars" android:layout_weight="50.0" android:textAllCaps="true" android:fontFamily="@font/roboto_regular" />
        <TextView android:textSize="@dimen/text_details" android:textColor="@color/text_color" android:gravity="center" android:layout_gravity="center" android:id="@id/btn_not_good" android:background="@drawable/selector_button" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/not_good" android:layout_weight="50.0" android:textAllCaps="true" android:fontFamily="@font/roboto_regular" />
        <TextView android:textSize="@dimen/text_details" android:textColor="@color/text_color" android:gravity="center" android:layout_gravity="center" android:id="@id/btn_late" android:background="@drawable/selector_button" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/remind_later" android:layout_weight="50.0" android:textAllCaps="true" android:fontFamily="@font/roboto_regular" />
    </LinearLayout>
</LinearLayout>